# nekpress-yellow-wallpaper-apparatus

./: .gitignore  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-analysis.yml
analysis/: README.md
analysis/results/: keyness_last_vs_first.csv  starvation_shift.json  window_metrics.csv
content/: about_editor.md  afterword_critical_introduction.md  audiobook_note.md  constraint_ledger.md  contents_after_story.md  editorial_principles.md  essay_ending_is_cold.md  essay_narration_credibility_voice.md  essay_publication_history_reception.md  essay_rest_cure.md  essay_rooms_property_authority.md  essay_wallpaper_as_technology.md  essay_work_gender_economics.md  glossary.md  historical_footnotes.md  intro.md  kdp_originality_bullets.txt  notes.md  notes_key_passages.md  readers_guide.md  scene_companion.md  sections.json  whats_in_this_edition.md
data/canonical/: love_of_life.txt  pin.json  provenance.json  yellow_wallpaper.txt
src/nekpress_apparatus/: analyze.py
src/nekpress_apparatus/nlp/: constraint_shift.py  starvation_shift.py
tests/: test_repo_basics.py
tools/: build_analysis.py  update_canonical.py  write_analysis_sha256.py
